# rbac_prover

./: CHANGELOG.md  README.md  rbacprover.cabal
app/: BooleanMatrix.hs  Permission.hs  Principal.hs  Propositions.hs  Prover.hs  RBACPolicies.hs  Test.hs
