cabal-version:      2.4
name:               rbacprover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ilyagribun
maintainer:         idgrigorev@edu.hse.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rbacprover
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Propositions, Prover, BooleanMatrix, RBACPolicies, Permission, Principal

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, hashable, unordered-containers, vector, lattices, strict, extra
    hs-source-dirs:   app
    default-language: Haskell2010
